font change/fix

--- a/styles/less/styles-fullscreen.less
+++ b/styles/less/styles-fullscreen.less
@@ -6,8 +6,8 @@
 @h1-size: 50px;
 
 @font-face {
-  font-family: "Connection";
-  src: url("../../assets/font/Connection.ttf") format("truetype");
+  font-family: "zorque";
+  src: url("../../assets/font/zorque.ttf") format("truetype");
 }
 
 head {
