--- a/styles/less/styles.less
+++ b/styles/less/styles.less
@@ -6,8 +6,8 @@
 @h1-size: 50px;
 
 @font-face {
-  font-family: "Connection";
-  src: url("../../assets/font/Connection.ttf") format("truetype");
+  font-family: "zorque";
+  src: url("../../assets/font/zorque.ttf") format("truetype");
 }
 
 head {
@@ -22,7 +22,7 @@ body {
     text-align: center;
 
     h1 {
-      font-family: "Connection", cursive;
+      font-family: "zorque", cursive;
       padding: 0;
       font-size: @h1-size;
     }
